--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,7 +23,7 @@ isme2n:
   # Comment/uncommet to show/hide
   # Icons appear in order, can be rearranged:
   social:
-    facebook:        jong-hui
+    facebook:        zooqzqz
     # twitter:         <username>
     # google:          <number>
     # vk:              <username>
@@ -44,7 +44,7 @@ isme2n:
     # steam:           <number>
     # reddit:          <username>
     # tumblr:          <username>
-    # pinterest:       <username>
+    pinterest:       lIlllIIIIlIllI
     # foursquare:      <number>
     # yelp:            <string>
     github:          jong-hui
@@ -58,8 +58,8 @@ isme2n:
     # delicious:       <username>
     # stumbleupon:     <username>
     # paypal:          <username>
-    email:           jong-hui@gmail.com
-    rss:             https://isme2n.github.io/feed.xml
+    email:           mailto:webd200@gmail.com
+    # rss:             https://isme2n.github.io/feed.xml
 
 # Another author
 mdo:
