--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,7 +23,7 @@ isme2n:
   # Comment/uncommet to show/hide
   # Icons appear in order, can be rearranged:
   social:
-    facebook:        zooqzqz
+    facebook:        jonghui
     # twitter:         <username>
     # google:          <number>
     # vk:              <username>
