--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #  User configuration
 # -----------------------------------------------------------------------------
 
-title:               학생의 웹 개발 블로그
+title:               웹을 탐험하는 블로그
 
 # The unique resource location of your page.
 # Set to `https://<username>.github.io` when hosting on GitHub Pages
@@ -13,12 +13,12 @@ url:                 https://jong-hui.github.io
 baseurl:             ""
 
 # A very short description of your page
-tagline:             기술 저장 블로그
+tagline:             웹 탐험 일지
 
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
 description:         >
-  웹을 배우는 학생 천종희입니다.
+  웹을 탐험하는 프론트엔드 개발자
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
