--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #  User configuration
 # -----------------------------------------------------------------------------
 
-title:               웹을 탐험하는 블로그
+title:               천종희 기술 블로그
 
 # The unique resource location of your page.
 # Set to `https://<username>.github.io` when hosting on GitHub Pages
@@ -13,12 +13,12 @@ url:                 https://jong-hui.github.io
 baseurl:             ""
 
 # A very short description of your page
-tagline:             웹 탐험 일지
+tagline:             천종희 기술 블로그
 
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
 description:         >
-  웹을 탐험하는 프론트엔드 개발자
+  Developer Who keep learning and thinking
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
